KB-0000 code smell fix